2003-04-15  Nathaniel Smith  <njs@pobox.com>

	* qm/test/base.py (get_extension_directories): typo in comment.
	* qm/test/classes/process_target.py (QMTestExecutable): typo in 
	docstring.

2003-04-15  Nathaniel Smith  <njs@pobox.com>

	* zope-dtml/ExtensionClass/: Remove.
	* qm/external/: New directory.
	* qm/external/__init__.py: New file.
	* zope-dtml/DocumentTemplate/: Move to...
	* qm/external/DocumentTemplate/: ...here.
	* qm/external/DocumentTemplate/DT_String.py (String._ParseTag):
	Tweak so it can find modules in the same directory.
	* qm/external/DocumentTemplate/__init__.py: Tweak to work even if
	ExtensionClass doesn't exist.
	* qm/external/local-DocumentTemplate-patch: Record the above two
	changes to ease future upgrades of DocumentTemplate.
	* GNUMakefile.in (PYTHONDIRS): Remove mention of zope-dtml/.
	(PYTHON_PACKAGES): Likewise.
	* qm/web.py: Import DocumentTemplate from new location.

2003-04-13  Mark Mitchell  <mark@codesourcery.com>

	* NEWS: Remove --result-format item and add --result-stream item.
	Mention "qmtest create".
	* qm/extension.py (write_extension_file): New function.
	(read_extension_file): Likewise.
	(parse_descriptor): Likewise.
	* qm/fields.py (PythonField): New class.
	* qm/test/cmdline.py (QMTest.__extension_kinds_string): New
	variable.
	(QMTest.extension_output_option_spec): New spec.
	(QMTest.result_format_spec): Remove.
	(QMTest.result_stream_spec): New spec.
	(QMTest.commands_spec): Add "qmtest create".  Remove
	"--result_format".  Add "--result_stream" for "qmtest run" and
	"qmtest summarize".
	(QMTest.__version_output): Update copyright date.
	(QMTest.__init__): Set __file_result_stream_class_name and
	__file_result_stream_class.
	(QMTest.GetCommandOption): Add documentation.
	(QMTest.Execute): Add "qmtest create" support.
	(QMTest.GetFileResultStreamClass): New method.
	(QMTest.GetResultStreamClass): Remove.
	(QMTest.__ExecuteCreate): New method.
	(QMTest.__ExecuteCreateTdb): Use it.