@@ -1,5 +1,9 @@
 2003-04-15  Nathaniel Smith  <njs@pobox.com>
 
+	* qm/setup_path.py.in: Make warnings filtering more fine-grained.
+	
+2003-04-15  Nathaniel Smith  <njs@pobox.com>
+
 	* qm/test/base.py (get_extension_directories): typo in comment.
 	* qm/test/classes/process_target.py (QMTestExecutable): typo in 
 	docstring.
